fix compilation error (imports) and emoji alignment on main page

--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -18,3 +18,9 @@
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(150px, 200px));
 }
+
+.Home__emoji-icon {
+  width: 1.2rem;
+  display: inline-block;
+  text-align: center;
+}
